kubernetes/apps/kube-system/webmin/k8s-1/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-1
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    auth.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:computer-classic"
    hajimari.io/group: "Nodes"
spec:
  rules:
    - host: &host "k8s-1.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-1
                port:
                  number: 10000
  tls:
    - hosts:
        - *host
      secretName: "k8s-1-tls"
